syntax = "proto3";
package rony;
option go_package = "github.com/ronaksoft/rony";
import "msg.proto";

// TunnelMessage
message TunnelMessage {
    bytes SenderID = 1;
    uint64 SenderReplicaSet = 2;
    repeated KeyValue Store = 3;
    MessageEnvelope Envelope = 4;
}

// RaftCommand
message RaftCommand {
    bytes Sender = 1;
    repeated KeyValue Store = 2;
    MessageEnvelope Envelope = 3;
}

// RaftState
enum RaftState {
    None = 0;
    Follower = 1;
    Candidate = 2;
    Leader = 3;
    Shutdown = 4;
}

// EdgeNode
message EdgeNode {
    bytes ServerID = 1;
    uint64 ReplicaSet = 2;
    uint32 ShardRangeMin = 3;
    uint32 ShardRangeMax = 4;
    uint32 RaftPort = 5;
    RaftState RaftState = 6;
    repeated string GatewayAddr = 7;
    repeated string TunnelAddr = 8;
}
